--- a/cmd/exp/hello.gohtml
+++ b/cmd/exp/hello.gohtml
@@ -1,10 +1,8 @@
-<h1>Hello, {{.Name}}</h1>
-<p>Bio: {{.Bio}}</p>
-
 <script>
-const user = {
+  const user = {
     "name": {{.Name}},
-    "bio": {{.Bio}}
-};
-console.log(user);
+    "bio": {{.Bio}},
+    "age": {{.Age}}
+  };
+  console.log(user);
 </script>
